--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,22 @@ asgiref==3.7.2
 black==23.9.1
 click==8.1.7
 crispy-bootstrap4==2022.1
+dj-database-url==0.5.0
 Django==4.2.6
 django-crispy-forms==2.0
 django-debug-toolbar==4.2.0
+flake8==5.0.4
+flake8-quotes==3.3.1
+mccabe==0.7.0
 mypy-extensions==1.0.0
 packaging==23.2
 pathspec==0.11.2
 Pillow==10.0.1
 platformdirs==3.11.0
+psycopg2-binary==2.9.9
+pycodestyle==2.9.1
+pyflakes==2.5.0
+python-dotenv==1.0.0
 sqlparse==0.4.4
-flake8==5.0.4
-flake8-quotes==3.3.1
+typing_extensions==4.8.0
+whitenoise==6.6.0
