--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-crispy-forms==2.0
 django-debug-toolbar==4.2.0
 flake8==5.0.4
 flake8-quotes==3.3.1
+gunicorn==21.2.0
 mccabe==0.7.0
 mypy-extensions==1.0.0
 packaging==23.2
